--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -22,6 +22,8 @@
                     <th scope="col">Id</th>
                     <th scope="col">Nome</th>
                     <th scope="col">Curso</th>
+                    <th scope="col">Remover</th>
+
                   </tr>
                 </thead>
                 <tbody>
@@ -30,8 +32,9 @@
                     <th scope="row">{{s.id}}</th>
                     <td>{{s.name}}</td>
                     <td>{{s.course}}</td>
+                    <td><button class="btn btn-danger" (click)="delete(s)">Remover</button></td> 
                   </tr>
-                 
+                  
                 </tbody>
               </table>
 
