--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -13,7 +13,9 @@
                     <input formControlName="course"  type="text" class="form-control" id="inputCourse" aria-describedby="courseHelp">
                     <div id="courseHelp" class="form-text">Digite o nome do curso</div>
                 </div>
-                <button type="submit" class="btn btn-primary" (click)="save()">Salvar</button>
+                <button *ngIf="!isEditing" type="submit" class="btn btn-primary" (click)="onClickSave()">Salvar</button>
+                 <button *ngIf="isEditing" type="submit" class="btn btn-primary" (click)="onClickConfirmUpdate()">Alterar</button>
+                 <button  type="submit" class="btn btn-secondary ms-2" (click)="onClickClear()">Cancelar</button>
             </form>
             <h2 class="text-center">Alunos Cadastrados</h2>
             <table class="table table-striped">
@@ -23,6 +25,7 @@
                     <th scope="col">Nome</th>
                     <th scope="col">Curso</th>
                     <th scope="col">Remover</th>
+                    <th scope="col">Alterar</th>
 
                   </tr>
                 </thead>
@@ -32,7 +35,8 @@
                     <th scope="row">{{s.id}}</th>
                     <td>{{s.name}}</td>
                     <td>{{s.course}}</td>
-                    <td><button class="btn btn-danger" (click)="delete(s)">Remover</button></td> 
+                    <td><button class="btn btn-danger" (click)="onClickDelete(s)">Remover</button></td>
+                    <td><button class="btn btn-success" (click)="onClickUpdate(s)">Alterar</button></td> 
                   </tr>
                   
                 </tbody>
